@@ -27,25 +27,6 @@
 
 #include <math.h>
 
-/* Amiga periods */
-static const int period_amiga[] = {
-   /*  0       1       2       3       4       5       6       7   */
-    0x1c56, 0x1c22, 0x1bee, 0x1bbb, 0x1b87, 0x1b55, 0x1b22, 0x1af0,  /* B  */
-    0x1abf, 0x1a8e, 0x1a5d, 0x1a2c, 0x19fc, 0x19cc, 0x199c, 0x196d,  /* C  */
-    0x193e, 0x1910, 0x18e2, 0x18b4, 0x1886, 0x1859, 0x182c, 0x1800,  /* C# */
-    0x17d4, 0x17a8, 0x177c, 0x1751, 0x1726, 0x16fb, 0x16d1, 0x16a7,  /* D  */
-    0x167d, 0x1654, 0x162b, 0x1602, 0x15d9, 0x15b1, 0x1589, 0x1562,  /* D# */
-    0x153a, 0x1513, 0x14ec, 0x14c6, 0x149f, 0x1479, 0x1454, 0x142e,  /* E  */
-    0x1409, 0x13e4, 0x13c0, 0x139b, 0x1377, 0x1353, 0x1330, 0x130c,  /* F  */
-    0x12e9, 0x12c6, 0x12a4, 0x1282, 0x125f, 0x123e, 0x121c, 0x11fb,  /* F# */
-    0x11da, 0x11b9, 0x1198, 0x1178, 0x1157, 0x1137, 0x1118, 0x10f8,  /* G  */
-    0x10d9, 0x10ba, 0x109b, 0x107d, 0x105e, 0x1040, 0x1022, 0x1004,  /* G# */
-    0x0fe7, 0x0fca, 0x0fad, 0x0f90, 0x0f73, 0x0f57, 0x0f3a, 0x0f1e,  /* A  */
-    0x0f02, 0x0ee7, 0x0ecb, 0x0eb0, 0x0e95, 0x0e7a, 0x0e5f, 0x0e45,  /* A# */
-    0x0e2b, 0x0e11, 0x0df7, 0x0ddd, 0x0dc3, 0x0daa, 0x0d91, 0x0d78,  /* B  */
-};
-
-
 #ifdef LIBXMP_PAULA_SIMULATOR
 /*
  * Period table from the Protracker V2.1A play routine
@@ -216,19 +197,11 @@ int note_to_period_mix(int n, int b)
     return (int)(8192.0 * XMP_PERIOD_BASE / pow(2, d / 12));
 }
 
-/* Get note from period using the Amiga frequency table */
+/* Get note from period */
 /* This function is used only by the MOD loader */
 int period_to_note(int p)
 {
-    int n, f;
-    const int *t = period_amiga + MAX_NOTE;
-
-    if (!p)
-	return 0;
-    for (n = 12 + NOTE_Bb0; p <= (MAX_PERIOD / 2); n += 12, p <<= 1);
-    for (; p > *t; t -= 8, n--);
-    for (f = 7; f && (*t > p); t++, f--);
-    return n - (f >> 2);
+    return round(log(pow(13694.0 / p, 12)) / M_LN2) + 1;
 }
 
 /* Get pitchbend from base note and amiga period */
