@@ -8,6 +8,7 @@ Stable versions
 	Fix multichannel MOD issues reported by Leilei:
 	- fix XM replayer note delay and retrig quirk
 	- fix XM replayer channel pan
+	- fix MOD loader period to note conversion
 	Other changes:
 	- fix S3M channel reset on sample end (reported by Alexander Null)
 	- fix Noisetracker MOD speed setting (reported by Tero Auvinen)
